# FairTeamMaker

./: .gitignore  README.md  app.py  database.py  requirements.txt  todo
backend/: generate_benchmark_data.py  legacy_wrapper_python.py  wrapper_cpp.py
backend/algorithms/: CMakeLists.txt  algorithm_benchmark.cpp  algorithm_benchmark_setup.py  allocation_algorithms.cpp  allocation_algorithms_setup.py  allocation_algorythms.cpp  allocation_algorythms.py  calculations.py  cpp_data_preperation.py  filtering.py  legacy_wrapper_python.py  normalization.py  preprocessing.py  setup.py  team_size_processing.py  wrapper.py  wrapper_cpp.py  wrapper_python.py
backend/algorithms/benchmark/: algorithm_benchmark.cpp  generate_benchmark_data.py
backend/api/: permissions.py
backend/data_processing/: brute_force.py  calculations.py  filtering.py  preprocessing.py
backend/db/: data_processing.py  defaultproject.py  models.py
frontend/SignUp/: index.html  script.js  styles.css
frontend/SignUp/Old/: Project.html  styles_project.css
frontend/SignUp/SignUp2/: index.html
frontend/UI/: interface.html  script_interface.js  styles_interface.css
tests/: test_team_size_processing.py
